--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Lucas Gest",
   "license": "ISC",
-  "description": ""
+  "description": "Bot Discord.js v13"
 }
